--- a/calculator.html
+++ b/calculator.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="shortcut icon" href="./images/calculator_icon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./calculator.css">
 </head>
+
 <body>
-    
+    <div class="calculator">
+        <input type="text" class="input">
+        <div class="button-container">
+            <button class="btn orange">AC</button>
+            <button class="btn orange">DEL</button>
+            <button class="btn orange">/</button>
+            <button class="btn orange">*</button>
+
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn orange">-</button>
+
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn orange">+</button>
+
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn orange equal">=</button>
+
+            <button class="btn zero">0</button>
+            <button class="btn">.</button>
+        </div>
+
+        <script src="./calculator.js"></script>
 </body>
+
 </html>
